test_src/compiler_errors/types/arithmetic/ModDoubleError2.b
class ModDoubleError2 {
    void test() {
        println(1 % 2.0);
    }
}
